force-app/main/default/objects/Maintenance_record__c/Maintenance_record__c.object-meta.xml
<CustomObject>
    <label>Maintenance record</label>
    <nameField>
        <label>Maintenance record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maintenance records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>