force-app/main/default/objects/Maintenance_record__c/fields/Braking_fluid_level__c.field-meta.xml
<CustomField>
    <fullName>Braking_fluid_level__c</fullName>
    <label>Braking fluid level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>