force-app/main/default/objects/Maintenance_record__c/fields/Bus__c.field-meta.xml
<CustomField>
    <fullName>Bus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bus</label>
    <referenceTo>Bus__c</referenceTo>
    <relationshipLabel>Maintenance records</relationshipLabel>
    <relationshipName>Maintenance_records</relationshipName>
    <type>Lookup</type>
</CustomField>