force-app/main/default/objects/Maintenance_record__c/fields/Garage__c.field-meta.xml
<CustomField>
    <fullName>Garage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Garage</label>
    <referenceTo>Garage__c</referenceTo>
    <relationshipLabel>Maintenance records</relationshipLabel>
    <relationshipName>Maintenance_records</relationshipName>
    <type>Lookup</type>
</CustomField>