force-app/main/default/objects/Maintenance_record__c/fields/Oil_level__c.field-meta.xml
<CustomField>
    <fullName>Oil_level__c</fullName>
    <label>Oil level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>