force-app/main/default/objects/Maintenance_record__c/fields/Schedule_reason__c.field-meta.xml
<CustomField>
    <fullName>Schedule_reason__c</fullName>
    <label>Schedule reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>