force-app/main/default/objects/Maintenance_record__c/fields/Schedule_Time__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Time__c</fullName>
    <label>Schedule Time</label>
    <type>DateTime</type>
</CustomField>