force-app/main/default/objects/Maintenance_record__c/fields/Tire_conditions__c.field-meta.xml
<CustomField>
    <fullName>Tire_conditions__c</fullName>
    <label>Tire conditions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>