force-app/main/default/objects/Maintenance_record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bus__c</columns>
    <columns>Garage__c</columns>
    <columns>Oil_level__c</columns>
    <columns>Recorded_odometer__c</columns>
    <columns>Schedule_reason__c</columns>
    <columns>Schedule_Time__c</columns>
    <columns>Tire_conditions__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>